--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>5.5.6.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.neovisionaries</groupId>
+            <artifactId>nv-i18n</artifactId>
+            <version>1.27</version>
+        </dependency>
+
         <!--TEST-->
 
         <dependency>
@@ -35,6 +41,8 @@
             <version>5.7.2</version>
             <scope>test</scope>
         </dependency>
+
+
 
     </dependencies>
 
