--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.source>13</maven.compiler.source>
         <maven.compiler.target>13</maven.compiler.target>
+        <javafx.version>16</javafx.version>
     </properties>
 
     <dependencies>
@@ -26,7 +27,7 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.5.6.Final</version>
         </dependency>
-
+        <!--COUNTRY CODES-->
         <dependency>
             <groupId>com.neovisionaries</groupId>
             <artifactId>nv-i18n</artifactId>
@@ -42,8 +43,51 @@
             <scope>test</scope>
         </dependency>
 
+        <!--JAVA FX-->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
 
     </dependencies>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>13</source>
+                        <target>13</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>javafx-maven-plugin</artifactId>
+                    <version>0.0.6</version>
+                    <executions>
+                        <execution>
+                            <!-- Default configuration for running with: mvn clean javafx:run -->
+                            <id>default-cli</id>
+                            <configuration>
+                                <mainClass>crm.CrmApplication</mainClass>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+
+<!--m-->
+
+
+
 
 </project>
